<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapTarget</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_set_target">Set Target</string>
    <string name="text_name">Name</string>
    <string name="text_azimuth">Azimuth</string>
    <string name="text_distance">Distance</string>
    <string name="text_meter">m</string>
    <string name="text_kilometer">Km</string>
    
    <string-array name="distance_unit_array">
        <item>@string/text_meter</item>
        <item>@string/text_kilometer</item>
    </string-array>
    
    <string name="text_enemy">Enemy</string>
    <string name="text_friend">Friend</string>
    <string name="text_accept">Accept</string>
    <string name="text_cancel">Cancel</string>
    
    <string name="action_edit_marker">Edit Marker</string>
    <string name="action_delete_marker">Delete Marker</string>

</resources>